Amarok ChangeLog
================
(C) 2002-2011 the Amarok authors.

Version 2.5.0-Beta 1
  FEATURES:
    * Enable dropping tracks on empty area in Saved Playlists to create new
      playlist.
    * Addded a "create new playlist" action in the empty space of the Saved
      Playlists. (BR202725)
    * Add new type of optional tokens in format string (Collection Organizer)
      (BR 264874)
    * Compilations are properly marked as such when transferring music
      to/from iPods. (BR 207880)
    * Ctrl+F now activates collection browser and focuses the seach collection
      bar. (BR 257381)
    * Music store based on the Amazon catalogue
    * Podcast subscription synchronisation and podcast status synchronisation
      with Gpodder service.
    * Possibility to browse through podcasts suggested by gpodder.net and
      through gpodder.net top recommended podcasts.
    * Made possible to make presets for TagGuesser. (BR 264632)
    * Display current timestamp in tray tooltip. (BR 278445)
    * Auto-save the playlist so that it is not lost if Amarok crashes.

  CHANGES:
    * Playlist: Don't group albums without name. (BR 243344)
    * Make delete confirmation dialog text less confusing. Patch by Gilles Habran.
      (BR 263693)
    * Removed never-working right-mouse-button action to unset iPod album cover.
    * Removed the confusing ability to edit the navigation breadcrumb.
    * BPM is now read from/saved to media devices (e.g. iPod).
    * Track last played date and time is now correctly read from/saved to iPods.
    * Depend on KDE 4.6 - various bugs were caused by older versions.
    * Total rewrite of Automated Playlist Generator algorithm.  New algorithm
      is far less complicated and crash-prone, but at the cost of taking
      longer to converge when the constraint tree is complicated. (BR 240927,
      BR 240301)
    * Added local podcasts are automatically subscribed in gpodder.net.